trying to make https work

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ draft: false
         <h1 class="header center">{{ site.title }}</h1>
         <div class="row center">
           <h5 class="header col s12 light">{{ site.description }}</h5>
-          <h6 class="header col s12 dark"><i>by <a href="http://github.com/{{ site.author_github }}" target="_blank" alt="Author: {{ site.author }}">{{ site.author }}</a>&nbsp&nbsp&nbsp<img style="width: 32px;height: 32px;border-radius: 16px;display: inline;" src="{{ site.github.avatar }}&s=40"></i><br><br></h6>
+          <h6 class="header col s12 dark"><i>by <a href="https://github.com/{{ site.author_github }}" target="_blank" alt="Author: {{ site.author }}">{{ site.author }}</a>&nbsp&nbsp&nbsp<img style="width: 32px;height: 32px;border-radius: 16px;display: inline;" src="{{ site.github.avatar }}&s=40"></i><br><br></h6>
         </div>
       </div>
     </div>
